--- a/mainwindow.html
+++ b/mainwindow.html
@@ -6,5 +6,19 @@
   </head>
   <body>
     <h1>Shopping List Demo App</h1>
+    <ul></ul>
+    <script>
+      const electron = require("electron");
+      const { ipcRenderer } = electron;
+      const ul = document.querySelector("ul");
+
+      // catch the item, via the ipcRenderer
+      ipcRenderer.on("item:add", function(e, item) {
+        const li = document.createElement("li");
+        const itemText = document.createTextNode(item);
+        li.appendChild(itemText);
+        ul.appendChild(li);
+      });
+    </script>
   </body>
 </html>
