Add clear items and remove item handling.

--- a/mainwindow.html
+++ b/mainwindow.html
@@ -11,14 +11,37 @@
       const electron = require("electron");
       const { ipcRenderer } = electron;
       const ul = document.querySelector("ul");
+      // const items = [];
 
-      // catch the item, via the ipcRenderer
+      // catch the item, add the item via the ipcRenderer
       ipcRenderer.on("item:add", function(e, item) {
         const li = document.createElement("li");
         const itemText = document.createTextNode(item);
         li.appendChild(itemText);
         ul.appendChild(li);
       });
+
+      // clear the item
+      ipcRenderer.on("item:clear", function() {
+        ul.innerHTML = "";
+        // if (items.length > 0) {
+        //   items.pop();
+        // }
+        //
+        // items.forEach(item => {
+        //   const li = document.createElement("li");
+        //   const itemText = document.createTextNode(item);
+        //   li.appendChild(itemText);
+        //   ul.appendChild(li);
+        // });
+      });
+
+      // delete individual item
+      ul.addEventListener("dblclick", removeItem);
+
+      function removeItem(e) {
+        e.target.remove();
+      }
     </script>
   </body>
 </html>
