--- a/mainwindow.html
+++ b/mainwindow.html
@@ -3,9 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <title>Shopping List Demo App</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
   </head>
   <body>
-    <h1>Shopping List Demo App</h1>
+    <nav>
+      <div class="nav-wrapper">
+        <a class="brand-logo center">Shopping List</a>
+      </div>
+    </nav>
     <ul></ul>
     <script>
       const electron = require("electron");
@@ -15,7 +23,9 @@
 
       // catch the item, add the item via the ipcRenderer
       ipcRenderer.on("item:add", function(e, item) {
+        ul.className = "collection";
         const li = document.createElement("li");
+        li.className = "collection-item";
         const itemText = document.createTextNode(item);
         li.appendChild(itemText);
         ul.appendChild(li);
@@ -24,6 +34,7 @@
       // clear the item
       ipcRenderer.on("item:clear", function() {
         ul.innerHTML = "";
+        ul.className = "";
         // if (items.length > 0) {
         //   items.pop();
         // }
@@ -41,6 +52,9 @@
 
       function removeItem(e) {
         e.target.remove();
+        if (ul.children.length === 0) {
+          ul.className = "";
+        }
       }
     </script>
   </body>
